--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Packageman
+title: Byron's Note
 subtitle:
 description: Later equals never
 author: Byron Zhang
