base: update theme schema

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Packageman
 subtitle:
 description: Later equals never
 author: Byron Zhang
-language: en
+language: zh-Hans
 timezone:
 
 # URL
